--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
-#hibernate properties
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+#spring.application.name=CONFIG-SERVER-DEFAULT-APP
+
+#MICROSERVICES CONFIGURATION
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
