--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-#spring.application.name=CONFIG-SERVER-DEFAULT-APP
+spring.application.name=CONFIG-SERVER-DEFAULT-APP
 
 #MICROSERVICES CONFIGURATION
 eureka.instance.prefer-ip-address=true
